fixed issue of stylesheet, html content changed.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,5 +14,23 @@
 
     <title>{{ page.title }}</title>
   </head>
-</html>
 
+<body>
+    <header>
+      <div class="inner">
+        <h1>WallyClock</h2>
+        <a href="http://pixma.github.io/WallyClock" class="button">Home</a>
+      </div>
+    </header>
+
+    <div id="content-wrapper">
+      <div class="inner clearfix">
+        <section id="main-content">
+                        {{ content }}
+                </section>
+
+      </div>
+    </div>
+
+  </body>
+</html>
