--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="http://pixma.github.io/WallyClock/stylesheets/screen.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="http://rjha.github.io/WallyClock/stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="http://rjha.github.io/WallyClock/stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="http://pixma.github.io/WallyClock/stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="http://pixma.github.io/WallyClock/stylesheets/print.css" media="print" />
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
