--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,29 +3,34 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" type="text/css" href="http://pixma.github.io/WallyClock/stylesheets/screen.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="http://pixma.github.io/WallyClock/stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="http://pixma.github.io/WallyClock/stylesheets/print.css" media="print" />
-
+    <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
-    <title>{{ page.title }}</title>
+    <title>WallyClock by pixma</title>
   </head>
 
-<body>
-    <header>
+  <body>
+    <div id="container">
       <div class="inner">
-        <h1>WallyClock</h2>
-        <a href="http://pixma.github.io/WallyClock" class="button">Home</a>
-      </div>
-    </header>
 
-    <div id="content-wrapper">
-      <div class="inner clearfix">
-        <section id="main-content">
+        <header>
+          <h1><a href="https://pixma.github.io/WallClock/" >WallyClock</a></h1>
+          <h2>Simple wall clock with sensors showing Time, Humidity and Temperature.</h2>
+        </header>
+
+        <section id="downloads" class="clearfix">
+          <a href="https://github.com/pixma/WallyClock/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/pixma/WallyClock/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/pixma/WallyClock" id="view-on-github" class="button"><span>View on GitHub</span></a>
+        </section>
+
+        <hr>
+
+        <section id="main_content">
                         {{ content }}
                 </section>
 
