--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1><a href="https://pixma.github.io/WallClock/" >WallyClock</a></h1>
+          <h1><a href="https://pixma.github.io/WallyClock/" >WallyClock</a></h1>
           <h2>Simple wall clock with sensors showing Time, Humidity and Temperature.</h2>
         </header>
 
